Fixed room API and retrofit API issues Handled error scenarios

--- a/app/src/main/res/layout/fragment_canada_facts.xml
+++ b/app/src/main/res/layout/fragment_canada_facts.xml
@@ -89,7 +89,7 @@
             android:paddingStart="37dp"
             android:paddingEnd="25dp"
             android:singleLine="true"
-            android:text="@string/dash"
+            android:text="@string/usd"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
             android:textSize="@dimen/text_15"
