--- a/app/src/main/res/drawable/rounded_rectangle_with_border.xml
+++ b/app/src/main/res/drawable/rounded_rectangle_with_border.xml
@@ -2,8 +2,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <stroke android:color="@color/white"
-        android:width="2dp"/>
+    <stroke
+        android:width="2dp"
+        android:color="@color/white" />
     <solid android:color="@color/semi_transparent" />
     <corners android:radius="15dp" />
 
