--- a/app/src/main/res/layout/fragment_canada_facts.xml
+++ b/app/src/main/res/layout/fragment_canada_facts.xml
@@ -51,13 +51,13 @@
         android:id="@+id/tv_wrong_amount"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rl_amount"
         android:layout_marginStart="28dp"
         android:layout_marginEnd="@dimen/text_10"
         android:text="@string/wrong_amount"
         android:textColor="@android:color/holo_red_light"
-        android:visibility="visible" />
+        android:visibility="visible"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rl_amount" />
 
 
     <RelativeLayout
