--- a/app/src/main/res/layout/fragment_currency_rate_calc.xml
+++ b/app/src/main/res/layout/fragment_currency_rate_calc.xml
@@ -166,7 +166,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_canadaFactList"
+        android:id="@+id/rv_currencyRateList"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="24dp"
