--- a/app/src/main/res/values/str_feature_movies.xml
+++ b/app/src/main/res/values/str_feature_movies.xml
@@ -2,7 +2,7 @@
     <string name="failure_network_connection">No Network Connection.</string>
     <string name="failure_server_error">Server Error</string>
     <string name="failure_currency_rate_list_unavailable">Currency Rate Unavailable.</string>
-    <string name="failure_currency_rate_non_existent">Canada Fact Not Existent.</string>
+    <string name="failure_currency_rate_non_existent">Currency Rates Not Existent.</string>
     <string name="content_description_empty">No content description.</string>
     <string name="right_angular_arrow"><![CDATA[>]]></string>
     <string name="dash">-</string>
